--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "montreal";
+  src: url("/fonts/NeueMontreal-Medium.otf");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "montreal";
+  src: url("/fonts/NeueMontreal-Bold.otf");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "montreal";
+  src: url("/fonts/NeueMontreal-Regular.otf");
+  font-weight: 400;
+}
+
+.montreal {
+  font-family: "montreal", sans-serif;
+}
+
+body {
+  background-color: #ececec;
+}
